Update compose files for Docker Compose V2

--- a/sitecore/run/sitecore-xm1/docker-compose.yml
+++ b/sitecore/run/sitecore-xm1/docker-compose.yml
@@ -16,10 +16,10 @@ services:
     healthcheck:
       test: ["CMD", "traefik", "healthcheck", "--ping"]
     volumes:
-      - source: \\.\pipe\docker_engine
-        target: \\.\pipe\docker_engine
+      - source: \\.\pipe\docker_engine\
+        target: \\.\pipe\docker_engine\
         type: npipe
-      - ./traefik:C:/etc/traefik
+      - .\traefik:C:\etc\traefik\
     depends_on:
       id:
         condition: service_healthy
@@ -95,7 +95,7 @@ services:
       Sitecore_Sitecore__IdentityServer__CertificateRawDataPassword: ${SITECORE_ID_CERTIFICATE_PASSWORD}
       Sitecore_License: ${SITECORE_LICENSE}
     healthcheck:
-      test: ["CMD", "pwsh", "-command", "C:/Healthchecks/Healthcheck.ps1"]
+      test: ["CMD", "pwsh", "-command", "C:\\Healthchecks\\Healthcheck.ps1"]
       timeout: 300s
     depends_on:
       mssql-init:
@@ -168,7 +168,7 @@ services:
       MEDIA_REQUEST_PROTECTION_SHARED_SECRET: ${MEDIA_REQUEST_PROTECTION_SHARED_SECRET}
       LOG_LEVEL_VALUE: ${LOG_LEVEL_VALUE}
     healthcheck:
-      test: ["CMD", "powershell", "-command", "C:/Healthchecks/Healthcheck.ps1"]
+      test: ["CMD", "powershell", "-command", "C:\\Healthchecks\\Healthcheck.ps1"]
       timeout: 300s
     labels:
       - "traefik.enable=true"
