--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/package.json
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/package.json
@@ -19,10 +19,13 @@
     "@astrojs/image": "^0.16.6",
     "@astrojs/node": "^5.1.3",
     "@astrojs/react": "^2.1.0",
+    "@astrojs/vue": "^3.0.2",
     "@sitecore-jss/sitecore-jss": "^21.0.8",
     "@sitecore-jss/sitecore-jss-react": "^21.0.8",
+    "@sitecore-jss/sitecore-jss-vue": "^21.5.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-vue": "^4.4.0",
     "astro": "^2.4.5",
     "bootstrap": "^5.2.3",
     "constant-case": "^3.0.4",
