--- a/sitecore/src/Serialization/items/headless-astro/Astro/home/styleguideExtended.yml
+++ b/sitecore/src/Serialization/items/headless-astro/Astro/home/styleguideExtended.yml
@@ -378,6 +378,38 @@ Languages:
     - ID: "001dd393-96c5-490b-924a-b0f25cd9efd8"
       Hint: __Lock
       Value: <r />
+    - ID: "04bf00db-f5fb-41f7-8ab7-22408372a981"
+      Hint: __Final Renderings
+      Value: |
+        <r xmlns:p="p" xmlns:s="s"
+          p:p="1">
+          <d
+            id="{FE5D7FDF-89C0-4D99-9AA3-B5FBD009C9F3}">
+            <r
+              uid="{67ED499E-0CD9-44D5-A87A-006C727339AA}"
+              p:after="r[@uid='{07EB65DC-D5B1-43C8-91DA-97E8B50A8930}']"
+              s:ds="local:/Page Data/Styleguide-Vue-Simple"
+              s:id="{FF024FF5-83AC-41C2-99E1-2A829EF4FB20}"
+              s:par=""
+              s:ph="/jss-main/jss-styleguide-layout-{34A6553C-81DE-5CD3-989E-853F6CB6DF8C}-0/jss-styleguide-section-{008A2F5B-4BA0-45FB-91CA-3342C1C70791}-0"
+              s:ccb="Clear on publish" />
+            <r
+              uid="{09FBFE11-6AA3-4098-A5F2-ABFB54008254}"
+              p:after="r[@uid='{67ED499E-0CD9-44D5-A87A-006C727339AA}']"
+              s:ds="local:/Page Data/Styleguide-VueUsage-Sitecore"
+              s:id="{A0740408-E63C-4240-94C2-57589F033C85}"
+              s:par="CacheClearingBehavior=Clear on publish"
+              s:ph="/jss-main/jss-styleguide-layout-{34A6553C-81DE-5CD3-989E-853F6CB6DF8C}-0/jss-styleguide-section-{008A2F5B-4BA0-45FB-91CA-3342C1C70791}-0" />
+            <r
+              uid="{2E07230F-A3C2-460F-AD29-356792EE7745}"
+              p:after="r[@uid='{09FBFE11-6AA3-4098-A5F2-ABFB54008254}']"
+              s:ds="local:/Page Data/Styleguide-Vue-Sitecore-Placeholder"
+              s:id="{FAE0C3B9-CC42-4B01-AAA3-8FDE66DEBE32}"
+              s:par=""
+              s:ph="/jss-main/jss-styleguide-layout-{34A6553C-81DE-5CD3-989E-853F6CB6DF8C}-0/jss-styleguide-section-{008A2F5B-4BA0-45FB-91CA-3342C1C70791}-0"
+              s:ccb="Clear on publish" />
+          </d>
+        </r>
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
       Value: 20230414T131122Z
@@ -386,14 +418,14 @@ Languages:
       Value: "{AF32C98B-C828-42AF-A649-74C1DE3303FB}"
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "0eadab1a-6d8e-4013-bdc0-7106dfe0f21b"
+      Value: "e4adaa21-6216-490b-bc54-7fdd71fcaafa"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20230606T184812Z
+      Value: 20231031T232150Z
     - ID: "ddcc7d64-cbf8-539d-99e9-20f530dce037"
       Hint: pageTitle
       Value: Styleguide | Sitecore JSS
