--- a/sitecore/src/Serialization/items/samples-astro-placeholder-settings/Astro/jss-styleguide-section.yml
+++ b/sitecore/src/Serialization/items/samples-astro-placeholder-settings/Astro/jss-styleguide-section.yml
@@ -35,6 +35,9 @@ SharedFields:
     {17AB5876-0DE1-4EA9-A526-B40C6A96CA67}
     {CE2DD79E-6456-4BC1-BF4B-EE4DEBCF12A6}
     {B0A891C4-34BA-4DDA-80E1-00518082705B}
+    {FF024FF5-83AC-41C2-99E1-2A829EF4FB20}
+    {A0740408-E63C-4240-94C2-57589F033C85}
+    {FAE0C3B9-CC42-4B01-AAA3-8FDE66DEBE32}
 Languages:
 - Language: en
   Versions:
@@ -53,11 +56,11 @@ Languages:
         sitecore\JssImport
     - ID: "8cdc337e-a112-42fb-bbb4-4143751e123f"
       Hint: __Revision
-      Value: "556576cc-52f9-4156-9881-4f02f63cd1a4"
+      Value: "2a02efc3-4dd6-4063-8125-5e5e7add26d1"
     - ID: "badd9cf9-53e0-4d0c-bcc0-2d784c282f6a"
       Hint: __Updated by
       Value: |
         sitecore\Admin
     - ID: "d9cf14b1-fa16-4ba6-9288-e8a174d4d522"
       Hint: __Updated
-      Value: 20230606T170757Z
+      Value: 20231031T225745Z
