--- a/sitecore/run/sitecore-xp1/docker-compose.override.yml
+++ b/sitecore/run/sitecore-xp1/docker-compose.override.yml
@@ -24,7 +24,7 @@ services:
   # Mount the Traefik configuration and certs.
   traefik:
     volumes:
-      - ../../docker/traefik:C:/etc/traefik
+      - ..\..\docker\traefik:C:\etc\traefik\
     depends_on:
       - cm
 
@@ -41,7 +41,7 @@ services:
   mssql:
     volumes:
       - type: bind
-        source: ${LOCAL_DATA_PATH}\sql
+        source: ${LOCAL_DATA_PATH}\\sql
         target: c:\data
 
   # Mount our SQL data folder and use our custom image with the Headless Services (JSS)
@@ -59,7 +59,7 @@ services:
   solr:
     volumes:
       - type: bind
-        source: ${LOCAL_DATA_PATH}\solr
+        source: ${LOCAL_DATA_PATH}\\solr
         target: c:\data
 
   # Mount our Solr data folder and use our retagged Solr image.
@@ -83,7 +83,7 @@ services:
     volumes:
       - ${HOST_LICENSE_FOLDER}:c:\license
     environment:
-      SITECORE_LICENSE_LOCATION: c:\license\license.xml
+      SITECORE_LICENSE_LOCATION: c:\\license\\license.xml
   # Use our custom CD (XP1) image with added modules and solution code.
   # Folders are mounted below for code deployment and log output. See Dockerfile for details.
   # Configure for a mounted license file instead of using SITECORE_LICENSE.
