--- a/sitecore/run/sitecore-xp0/docker-compose.yml
+++ b/sitecore/run/sitecore-xp0/docker-compose.yml
@@ -16,10 +16,10 @@ services:
     healthcheck:
       test: ["CMD", "traefik", "healthcheck", "--ping"]
     volumes:
-      - source: \\.\pipe\docker_engine
-        target: \\.\pipe\docker_engine
+      - source: \\.\pipe\docker_engine\
+        target: \\.\pipe\docker_engine\
         type: npipe
-      - ./traefik:C:/etc/traefik
+      - .\traefik:C:\etc\traefik\
     depends_on:
       id:
         condition: service_healthy
@@ -90,7 +90,7 @@ services:
       Sitecore_Sitecore__IdentityServer__CertificateRawDataPassword: ${SITECORE_ID_CERTIFICATE_PASSWORD}
       Sitecore_License: ${SITECORE_LICENSE}
     healthcheck:
-      test: ["CMD", "pwsh", "-command", "C:/Healthchecks/Healthcheck.ps1"]
+      test: ["CMD", "pwsh", "-command", "C:\\Healthchecks\\Healthcheck.ps1"]
       timeout: 300s
     depends_on:
       mssql-init:
@@ -141,7 +141,7 @@ services:
       MEDIA_REQUEST_PROTECTION_SHARED_SECRET: ${MEDIA_REQUEST_PROTECTION_SHARED_SECRET}
       LOG_LEVEL_VALUE: ${LOG_LEVEL_VALUE}
     healthcheck:
-      test: ["CMD", "powershell", "-command", "C:/Healthchecks/Healthcheck.ps1"]
+      test: ["CMD", "powershell", "-command", "C:\\Healthchecks\\Healthcheck.ps1"]
       timeout: 300s
     labels:
       - "traefik.enable=true"
@@ -218,7 +218,7 @@ services:
       Sitecore_Sitecore:XConnect:SearchIndexer:Services:Solr.SolrWriterSettings:Options:RequireHttps: 'false'
       Sitecore_Sitecore:XConnect:CollectionSearch:Services:XConnectSolrHealthCheckServicesConfiguration:Options:RequireHttps: 'false'
     healthcheck:
-      test: ["CMD", "powershell", "-command", "C:/Healthchecks/Healthcheck.ps1 -Port 8080"]
+      test: ["CMD", "powershell", "-command", "C:\\Healthchecks\\Healthcheck.ps1 -Port 8080"]
       timeout: 300s
   xdbautomationworker:
     isolation: ${ISOLATION}
@@ -252,5 +252,5 @@ services:
       Sitecore_ConnectionStrings_Reporting: Data Source=${SQL_SERVER};Initial Catalog=${SQL_DATABASE_PREFIX}.Reporting;User ID=${SQL_SA_LOGIN};Password=${SQL_SA_PASSWORD}
       Sitecore_License: ${SITECORE_LICENSE}
     healthcheck:
-      test: ["CMD", "powershell", "-command", "C:/Healthchecks/Healthcheck.ps1 -Port 8080"]
+      test: ["CMD", "powershell", "-command", "C:\\Healthchecks\\Healthcheck.ps1 -Port 8080"]
       timeout: 300s
