--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/package.json
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/package.json
@@ -27,6 +27,8 @@
     "bootstrap": "^5.2.3",
     "constant-case": "^3.0.4",
     "debug": "^4.3.4",
+    "graphql": "^16.8.1",
+    "graphql-request": "^6.1.0",
     "http-proxy-middleware": "^2.0.6",
     "nanostores": "^0.8.0",
     "react": "^18.2.0",
