renamed run folder to topology since for some reason .env file doesn't get gitignored if present under run folder... can't understand why but anyway topology seems a better name than run...

--- a/sitecore/.gitignore
+++ b/sitecore/.gitignore
@@ -4,6 +4,8 @@
 # NuGet cache for Sitecore CLI
 .sitecore/package-cache/
 
+.env
+
 # Ephemeral index caches used by serialization, do not commit
 .scindex
 
