--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/package.json
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/package.json
@@ -16,27 +16,26 @@
   },
   "dependencies": {
     "@astro-sitecore-jss/astro-sitecore-jss": "latest",
-    "@astrojs/image": "^0.16.6",
-    "@astrojs/node": "^5.1.3",
-    "@astrojs/react": "^2.1.0",
-    "@astrojs/vue": "^2.2.1",
+    "@astrojs/node": "^6.0.3",
+    "@astrojs/react": "^3.0.4",
+    "@astrojs/vue": "^3.0.3",
     "@sitecore-jss/sitecore-jss": "^21.0.8",
     "@sitecore-jss/sitecore-jss-react": "^21.0.8",
     "@sitecore-jss/sitecore-jss-vue": "^21.5.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-vue": "^4.4.0",
-    "astro": "^2.10.15",
+    "astro": "^3.4.3",
     "bootstrap": "^5.2.3",
-    "constant-case": "^3.0.4",
+    "change-case": "^4.1.2",
     "debug": "^4.3.4",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
     "http-proxy-middleware": "^2.0.6",
-    "nanostores": "^0.8.0",
+    "nanostores": "^0.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sharp": "^0.31.3",
+    "sharp": "^0.32.6",
     "tsconfig-paths": "^4.2.0"
   },
   "devDependencies": {
