1. utilizes .env.template,
2. rectified down.ps1 and up.ps1 to work based on topology param instead of looping...
3. uses docker v2 commands without hyphens wherever necessary

--- a/sitecore/topology/sitecore-xm1/.env.template
+++ b/sitecore/topology/sitecore-xm1/.env.template
@@ -3,8 +3,9 @@ REGISTRY=
 COMPOSE_PROJECT_NAME=jss_astro
 
 # Configure host names, which will be used to configure Traefik proxy routing.
-CM_HOST=cm.headless.localhost
-ID_HOST=id.headless.localhost
+CD_HOST=
+CM_HOST=
+ID_HOST=
 NEXTJS_HOST=nextjs.headless.localhost
 ANGULAR_HOST=angular.headless.localhost
 REACT_HOST=react.headless.localhost
@@ -34,10 +35,6 @@ EXPERIENCE_ACCELERATOR_IMAGE=scr.sitecore.com/sxp/modules/sitecore-sxa-xm1-asset
 TOOLS_IMAGE=scr.sitecore.com/tools/sitecore-docker-tools-assets:10.2.0-1809
 TRAEFIK_IMAGE=traefik:v2.2.0-windowsservercore-1809
 
-# Windows and Node.js version for JSS
-NODEJS_PARENT_IMAGE=mcr.microsoft.com/windows/nanoserver:1809
-NODEJS_VERSION=16.13.2
-
 # MSBuild configuration and the target build stage for the Rendering Host image.
 BUILD_CONFIGURATION=debug
 
@@ -45,9 +42,9 @@ BUILD_CONFIGURATION=debug
 SOLR_CORE_PREFIX_NAME=sitecore
 
 # JSS deployment secret, should also be in the scjssconfig.json
-JSS_jss_astro_DEPLOYMENT_SECRET=AA23494F96C547F9A4CD11D78EC01037
+JSS_jss_astro_DEPLOYMENT_SECRET='AA23494F96C547F9A4CD11D78EC01037'
 
-# JSS editing secret, should be provided to CM and the Next.js Rendering Host
+# JSS editing secret, should be provided to CM
 JSS_EDITING_SECRET=
 
 # Mount paths for code deployment, data persistence, and your Sitecore license.
