--- a/sitecore/topology/sitecore-xp0/.env.template
+++ b/sitecore/topology/sitecore-xp0/.env.template
@@ -3,8 +3,8 @@ REGISTRY=
 COMPOSE_PROJECT_NAME=jss_astro
 
 # Configure host names, which will be used to configure Traefik proxy routing.
-CM_HOST=cm.headless.localhost
-ID_HOST=id.headless.localhost
+CM_HOST=
+ID_HOST=
 NEXTJS_HOST=nextjs.headless.localhost
 ANGULAR_HOST=angular.headless.localhost
 REACT_HOST=react.headless.localhost
@@ -34,14 +34,14 @@ EXPERIENCE_ACCELERATOR_IMAGE=scr.sitecore.com/sxp/modules/sitecore-sxa-xp1-asset
 TOOLS_IMAGE=scr.sitecore.com/tools/sitecore-docker-tools-assets:10.2.0-1809
 TRAEFIK_IMAGE=traefik:v2.2.0-windowsservercore-1809
 
-# MSBuild configuration and the target build stage.
+# MSBuild configuration and the target build stage for the Rendering Host image.
 BUILD_CONFIGURATION=debug
 
 # Prefix for Solr cores used with Sitecore Content Search
 SOLR_CORE_PREFIX_NAME=sitecore
 
 # JSS deployment secret, should also be in the scjssconfig.json
-JSS_jss_astro_DEPLOYMENT_SECRET=AA23494F96C547F9A4CD11D78EC01037
+JSS_jss_astro_DEPLOYMENT_SECRET='AA23494F96C547F9A4CD11D78EC01037'
 
 # JSS editing secret, should be provided to CM
 JSS_EDITING_SECRET=
@@ -64,13 +64,9 @@ TRAEFIK_ISOLATION=hyperv
 REPORTING_API_KEY=
 SITECORE_IDSECRET=
 TELERIK_ENCRYPTION_KEY=
-SITECORE_GRAPHQL_ENABLED=false
-SITECORE_GRAPHQL_EXPOSEPLAYGROUND=false
-SITECORE_GRAPHQL_UPLOADMEDIAOPTIONS_ENCRYPTIONKEY=pPqh5t3Ptzs4vUSy
+SITECORE_GRAPHQL_UPLOADMEDIAOPTIONS_ENCRYPTIONKEY=
 SITECORE_ID_CERTIFICATE=
 SITECORE_ID_CERTIFICATE_PASSWORD=
-MEDIA_REQUEST_PROTECTION_SHARED_SECRET=
-LOG_LEVEL_VALUE=INFO
 MEDIA_REQUEST_PROTECTION_SHARED_SECRET=
 LOG_LEVEL_VALUE=INFO
 SITECORE_GRAPHQL_ENABLED=false
