--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/package.json
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/package.json
@@ -6,7 +6,7 @@
     "language": "en"
   },
   "scripts": {
-    "dev": "npm-run-all --serial bootstrap astro:dev",
+    "dev": "npm-run-all astro:dev",
     "build": "npm-run-all --serial bootstrap astro:build",
     "astro:dev": "astro dev --host",
     "astro:build": "astro build",
@@ -37,7 +37,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.32.6",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "vite-tsconfig-paths": "^4.2.1"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
