--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/tsconfig.app.json
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/tsconfig.app.json
@@ -30,6 +30,6 @@
     "allowJs": false
   },
   "files": [],
-  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "../astro-sitecore-jss/**/*.ts", "../astro-sitecore-jss/**/*.tsx, ../astro-sitecore-jss/**/*.Astro"],
   "exclude": ["node_modules", "tmp"]
 }
