--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/package.json
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/package.json
@@ -16,6 +16,17 @@
   },
   "dependencies": {
     "@analogjs/astro-angular": "^0.2.19",
+    "@angular-devkit/build-angular": "^17.0.1",
+    "@angular/animations": "^17.0.3",
+    "@angular/common": "^17.0.3",
+    "@angular/compiler": "^17.0.3",
+    "@angular/compiler-cli": "^17.0.3",
+    "@angular/core": "^17.0.3",
+    "@angular/forms": "^17.0.3",
+    "@angular/language-service": "^17.0.3",
+    "@angular/platform-browser": "^17.0.3",
+    "@angular/platform-browser-dynamic": "^17.0.3",
+    "@angular/platform-server": "^17.0.3",
     "@astro-sitecore-jss/astro-sitecore-jss": "latest",
     "@astrojs/node": "^6.0.3",
     "@astrojs/react": "^3.0.4",
@@ -36,11 +47,15 @@
     "nanostores": "^0.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rxjs": "^7.8.1",
     "sharp": "^0.32.6",
     "tsconfig-paths": "^4.2.0",
-    "vite-tsconfig-paths": "^4.2.1"
+    "tslib": "^2.6.2",
+    "vite-tsconfig-paths": "^4.2.1",
+    "zone.js": "^0.14.2"
   },
   "devDependencies": {
+    "@types/node": "^20.9.1",
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.9.1"
   }
