Show case with Angular for Text/RichText

--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/package.json
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/package.json
@@ -27,11 +27,13 @@
     "@angular/platform-browser": "^17.0.3",
     "@angular/platform-browser-dynamic": "^17.0.3",
     "@angular/platform-server": "^17.0.3",
+    "@angular/router": "^17.0.3",
     "@astro-sitecore-jss/astro-sitecore-jss": "latest",
     "@astrojs/node": "^6.0.3",
     "@astrojs/react": "^3.0.4",
     "@astrojs/vue": "^3.0.3",
     "@sitecore-jss/sitecore-jss": "^21.0.8",
+    "@sitecore-jss/sitecore-jss-angular": "^21.5.0",
     "@sitecore-jss/sitecore-jss-react": "^21.0.8",
     "@sitecore-jss/sitecore-jss-vue": "^21.5.0",
     "@types/react": "^18.0.28",
