--- a/sitecore/docker/traefik/config/dynamic/certs_config.yaml
+++ b/sitecore/docker/traefik/config/dynamic/certs_config.yaml
@@ -1,4 +1,10 @@
 tls:
   certificates:
+    - certFile: C:\etc\traefik\certs\_wildcard.sxastarter.localhost.pem
+      keyFile: C:\etc\traefik\certs\_wildcard.sxastarter.localhost-key.pem
+    - certFile: C:\etc\traefik\certs\_wildcard.rendering.localhost.pem
+      keyFile: C:\etc\traefik\certs\_wildcard.rendering.localhost-key.pem
     - certFile: C:\etc\traefik\certs\_wildcard.headless.localhost.pem
       keyFile: C:\etc\traefik\certs\_wildcard.headless.localhost-key.pem
+    - certFile: C:\etc\traefik\certs\xmcloudcm.localhost.pem
+      keyFile: C:\etc\traefik\certs\xmcloudcm.localhost-key.pem
