--- a/sitecore/nuget.config
+++ b/sitecore/nuget.config
@@ -4,6 +4,7 @@
     <clear />
     <add key="Nuget" value="https://api.nuget.org/v3/index.json" />
     <add key="Sitecore" value="https://sitecore.myget.org/F/sc-packages/api/v3/index.json" />
+    <add key="SitecoreGallery" value="https://nuget.sitecore.com/resources/v2/" />
   </packageSources>
 
   <activePackageSource>
