--- a/sitecore/topology/sitecore-xmcloud/.env.template
+++ b/sitecore/topology/sitecore-xmcloud/.env.template
@@ -12,7 +12,7 @@ VUE_HOST=vue.headless.localhost
 ASTRO_HOST=astro.headless.localhost
 
 RENDERING_HOST=www.rendering.localhost
-RENDERING_HOST_INTERNAL_URI=http://rendering:3000
+RENDERING_HOST_INTERNAL_URI=http://rendering:4321
 
 # Sitecore Docker registry and platform version.
 # The ltsc2019-based images are used by default here and can be configured by baseOs param of init.ps1 script. SAC images are also available.
@@ -83,7 +83,7 @@ AZUREBLOB_CONTAINER=
 EXPEDGE_CONNECTION=
 LOG_LEVEL_VALUE=INFO
 
-HOST_LICENSE_FOLDER=C:\licenses
+HOST_LICENSE_FOLDER=
 NODEJS_VERSION=18.18.1
 VERSION=1.0.1
 JSS_DEPLOYMENT_SECRET_xmcloudpreview=110F1C44A496B45478640DD36F80C18C9
