--- a/sitecore/topology/sitecore-xmcloud/docker-compose.override.yml
+++ b/sitecore/topology/sitecore-xmcloud/docker-compose.override.yml
@@ -31,7 +31,7 @@ services:
       args:
         PARENT_IMAGE: ${REGISTRY}${COMPOSE_PROJECT_NAME}-nodejs:${VERSION:-latest}
     volumes:
-      - ..\..\..\astro-sitecore-jss\packages\astro-sitecore-jss-sample:C:\app
+      - ..\..\..\astro-sitecore-jss:C:\app
     environment:
       SITECORE_API_HOST: "http://cm"
       NEXTJS_DIST_DIR: ".next-container"
@@ -87,7 +87,7 @@ services:
       - ${HOST_LICENSE_FOLDER}:c:\license
     environment:
       SITECORE_LICENSE_LOCATION: c:\license\license.xml
-      RENDERING_HOST_INTERNAL_URI: "http://rendering:3000"
+      RENDERING_HOST_INTERNAL_URI: "http://rendering:4321"
       JSS_DEPLOYMENT_SECRET_xmcloudpreview: ${JSS_DEPLOYMENT_SECRET_xmcloudpreview}
       SITECORE_JSS_EDITING_SECRET: ${JSS_EDITING_SECRET}
       SITECORE_EDITING_HOST_PUBLIC_HOST: "${RENDERING_HOST}"
