enabled rendering host deployment for all the topologies refactoring of the xm-cloud build

--- a/sitecore/topology/sitecore-xmcloud/.env.template
+++ b/sitecore/topology/sitecore-xmcloud/.env.template
@@ -48,8 +48,8 @@ JSS_jss_astro_DEPLOYMENT_SECRET='AA23494F96C547F9A4CD11D78EC01037'
 JSS_EDITING_SECRET=
 
 # Mount paths for code deployment, data persistence, and your Sitecore license.
-LOCAL_DEPLOY_PATH=..\..\docker\xm-cloud\deploy\
-LOCAL_DATA_PATH=..\..\docker\xm-cloud\data\
+LOCAL_DEPLOY_PATH=..\..\docker-xm-cloud\deploy\
+LOCAL_DATA_PATH=..\..\docker-xm-cloud\data\
 
 # The isolation mode for Sitecore containers.
 # Compatibility of isolation mode depends on the Host and Container OS versions.
