--- a/sitecore/topology/sitecore-xmcloud/docker-compose.override.yml
+++ b/sitecore/topology/sitecore-xmcloud/docker-compose.override.yml
@@ -16,7 +16,7 @@ services:
   nodejs:
     image: ${REGISTRY}${COMPOSE_PROJECT_NAME}-nodejs:${VERSION:-latest}
     build:
-      context: ../../docker/xm-cloud/build/nodejs
+      context: ../../docker/build/nodejs
       args:
         PARENT_IMAGE: ${NODEJS_PARENT_IMAGE}
         NODEJS_VERSION: ${NODEJS_VERSION}
@@ -26,7 +26,7 @@ services:
   rendering:
     image: ${REGISTRY}${COMPOSE_PROJECT_NAME}-rendering:${VERSION:-latest}
     build:
-      context: ../../docker/xm-cloud/build/rendering
+      context: ../../docker/build/rendering
       target: ${BUILD_CONFIGURATION}
       args:
         PARENT_IMAGE: ${REGISTRY}${COMPOSE_PROJECT_NAME}-nodejs:${VERSION:-latest}
@@ -60,7 +60,7 @@ services:
   mssql:
     volumes:
       - type: bind
-        source: ..\..\docker\xm-cloud\data\sql
+        source: ..\..\docker-xm-cloud\data\sql
         target: c:\data
 
   # Mount our Solr data folder and use our retagged Solr image.
@@ -68,7 +68,7 @@ services:
   solr:
     volumes:
       - type: bind
-        source: ..\..\docker\xm-cloud\data\solr
+        source: ..\..\docker-xm-cloud\data\solr
         target: c:\data
 
   # Use our custom CM image with added modules and solution code.
@@ -77,7 +77,7 @@ services:
   cm:
     image: ${REGISTRY}${COMPOSE_PROJECT_NAME}-xmcloud-cm:${VERSION:-latest}
     build:
-      context: ../../docker/xm-cloud/build/cm
+      context: ../../docker-xm-cloud/build/cm
       args:
         PARENT_IMAGE: ${SITECORE_DOCKER_REGISTRY}sitecore-xmcloud-cm:${SITECORE_VERSION}
         TOOLS_IMAGE: ${TOOLS_IMAGE}
