--- a/sitecore/topology/sitecore-xp1/docker-compose.override.yml
+++ b/sitecore/topology/sitecore-xp1/docker-compose.override.yml
@@ -45,7 +45,7 @@ services:
       NEXTJS_DIST_DIR: ".next-container"
       PUBLIC_URL: "https://${RENDERING_HOST}"
       JSS_EDITING_SECRET: ${JSS_EDITING_SECRET}
-      SITECORE_API_KEY: "${SITECORE_API_KEY_xmcloudpreview}"
+      SITECORE_API_KEY: "${SITECORE_API_KEY}"
       DISABLE_SSG_FETCH: ${DISABLE_SSG_FETCH}
     depends_on:
       - cm
