--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/package.json
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/package.json
@@ -31,10 +31,13 @@
     "@astrojs/node": "^7.0.4",
     "@astrojs/react": "^3.0.9",
     "@astrojs/vue": "^4.0.8",
-    "@sitecore-jss/sitecore-jss": "^21.0.8",
-    "@sitecore-jss/sitecore-jss-angular": "^21.5.0",
-    "@sitecore-jss/sitecore-jss-react": "^21.0.8",
-    "@sitecore-jss/sitecore-jss-vue": "^21.5.0",
+    "@sitecore-cloudsdk/events": "^0.1.3",
+    "@sitecore-feaas/clientside": "^0.5.12",
+    "@sitecore-jss/sitecore-jss": "^21.6.0",
+    "@sitecore-jss/sitecore-jss-angular": "^21.6.0",
+    "@sitecore-jss/sitecore-jss-react": "^21.6.0",
+    "@sitecore-jss/sitecore-jss-vue": "^21.6.0",
+    "@sitecore/components": "^1.1.6",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.16",
     "@vitejs/plugin-vue": "^5.0.2",
