--- a/sitecore/src/Jss.Astro.Sitecore.Integration/Jss.Astro.Sitecore.Integration.csproj
+++ b/sitecore/src/Jss.Astro.Sitecore.Integration/Jss.Astro.Sitecore.Integration.csproj
@@ -68,6 +68,7 @@
     <Content Include="App_Config\Include\Sitecore.LoadBalancing.config" />
     <Content Include="App_Config\Include\Sitecore.Media.config" />
     <Content Include="App_Config\Include\Sitecore.EditingSecret.config" />
+    <Content Include="App_Config\Include\Sitecore.Hotfix.AllowedRenderings.config" />
     <None Include="Platform.wpp.targets" />
     <None Include="Properties\PublishProfiles\Local.pubxml" />
     <None Include="README.md" />
