--- a/astro-sitecore-jss/packages/astro-sitecore-jss-sample/package.json
+++ b/astro-sitecore-jss/packages/astro-sitecore-jss-sample/package.json
@@ -28,9 +28,9 @@
     "@angular/platform-server": "^18.1.3",
     "@angular/router": "^18.1.3",
     "@astro-sitecore-jss/astro-sitecore-jss": "0.6.2",
-    "@astrojs/node": "^8.2.5",
-    "@astrojs/react": "^3.0.9",
-    "@astrojs/vue": "^4.5.0",
+    "@astrojs/node": "^9.0.0-beta.2",
+    "@astrojs/react": "^3.6.2",
+    "@astrojs/vue": "^5.0.0-beta.0",
     "@babel/preset-react": "^7.24.7",
     "@sitecore-cloudsdk/events": "^0.3.0",
     "@sitecore-feaas/clientside": "^0.5.12",
@@ -42,7 +42,7 @@
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.16",
     "@vitejs/plugin-vue": "^5.0.2",
-    "astro": "^4.13.1",
+    "astro": "^5.0.0-beta.4",
     "bootstrap": "^5.2.3",
     "change-case": "^4.1.2",
     "debug": "^4.3.4",
