--- a/astro-sitecore-jss/packages/astro-vue-sitecore-jss-sample/package.json
+++ b/astro-sitecore-jss/packages/astro-vue-sitecore-jss-sample/package.json
@@ -31,9 +31,9 @@
     "@angular/platform-server": "^18.1.3",
     "@angular/router": "^18.1.3",
     "@astro-sitecore-jss/astro-sitecore-jss": "0.6.2",
-    "@astrojs/node": "^8.3.2",
-    "@astrojs/react": "^3.6.1",
-    "@astrojs/vue": "^4.5.0",
+    "@astrojs/node": "^9.0.0-beta.2",
+    "@astrojs/react": "^3.6.2",
+    "@astrojs/vue": "^5.0.0-beta.0",
     "@sitecore-jss/sitecore-jss": "^22.0.0",
     "@sitecore-jss/sitecore-jss-angular": "^22.0.0",
     "@sitecore-jss/sitecore-jss-react": "^22.0.0",
@@ -41,7 +41,7 @@
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.16",
     "@vitejs/plugin-vue": "^5.0.2",
-    "astro": "^4.13.1",
+    "astro": "^5.0.0-beta.4",
     "bootstrap": "^5.2.3",
     "change-case": "^4.1.2",
     "debug": "^4.3.4",
